fixed images again

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://MayaStelzer.github.io/personalwebsite",
+  "homepage": "http://MayaStelzer.github.io/",
   "name": "personalwebsite",
   "version": "0.1.0",
   "private": true,
